// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontSynthesisStyle renders 0 1`] = `
Array [
  .c0 {
  font-synthesis-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders function 1`] = `
Array [
  .c0 {
  font-synthesis-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  font-synthesis-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders negative number 1`] = `
Array [
  .c0 {
  font-synthesis-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-synthesis-style: July;
  }
}

@media April {
  .c0 {
    font-synthesis-style: August;
  }
}

@media January {
  .c0 {
    font-synthesis-style: September;
  }
}

@media April {
  .c0 {
    font-synthesis-style: November;
  }
}

@media June {
  .c0 {
    font-synthesis-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-synthesis-style: July;
  }
}

@media April {
  .c0 {
    font-synthesis-style: August;
  }
}

@media January {
  .c0 {
    font-synthesis-style: September;
  }
}

@media April {
  .c0 {
    font-synthesis-style: November;
  }
}

@media June {
  .c0 {
    font-synthesis-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis-style: January;
  }
}

@media April {
  .c0 {
    font-synthesis-style: December;
  }
}

@media January {
  .c0 {
    font-synthesis-style: April;
  }
}

@media April {
  .c0 {
    font-synthesis-style: May;
  }
}

@media June {
  .c0 {
    font-synthesis-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis-style: January;
  }
}

@media April {
  .c0 {
    font-synthesis-style: December;
  }
}

@media January {
  .c0 {
    font-synthesis-style: April;
  }
}

@media April {
  .c0 {
    font-synthesis-style: May;
  }
}

@media June {
  .c0 {
    font-synthesis-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders postitive number 1`] = `
Array [
  .c0 {
  font-synthesis-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders string 1`] = `
Array [
  .c0 {
  font-synthesis-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisStyle renders valid theme path 1`] = `
Array [
  .c0 {
  font-synthesis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
